# LLM_Task_Orchestration

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Idea.md  PROJECT_CONTEXT.md  README.md  docker-compose.yml  llmoctl.py  pyproject.toml
config/: gateway.yaml  litellm.config.yaml  models.yaml  orchestrator.yaml
docs/: ARCHITECTURE.md  DOCKER_VLLM_RUNTIME.md  DYNAMIC_MODEL_ALLOCATION.md  LM_STUDIO_MODELS.md  REAL_RUN_PREP.md  RESOURCE_REQUEST_API.md  TASK_CONTEXT_ORCHESTRATION_PLAN.md  UNIFIED_TASK_CONTRACT_PLAN.md  UNIFIED_TASK_PROTOCOL.md
observability/: prometheus.yml
observability/grafana/dashboards/: README.md
orchestrator_client/: __init__.py  client.py
orchestrator_core/: __init__.py  config.py  logging.py  openai.py  prometheus.py
scripts/: discover_lmstudio_models.ps1  list_models.ps1  prepare_real_run.ps1  smoke_dynamic_allocation.ps1  smoke_test.ps1  smoke_test.sh
services/fake_openai_backend/: Dockerfile
services/fake_openai_backend/fake_openai_backend/: __init__.py  main.py  settings.py
services/gpu_inventory/: Dockerfile  requirements.txt
services/gpu_inventory/gpu_inventory/: __init__.py  main.py  models.py  nvidia_smi.py  settings.py
services/gpu_inventory/tests/: test_nvidia_smi.py
services/healthcheck/: Dockerfile  requirements.txt
services/healthcheck/app/: __init__.py  lmstudio_client.py  main.py  metrics.py  settings.py  state.py
services/healthcheck/tests/: test_state.py
services/lifecycle/: Dockerfile  requirements.txt
services/lifecycle/lifecycle/: __init__.py  adapters.py  allocation.py  allocation_service.py  cleanup.py  config.py  controller.py  dynamic_policy.py  lmstudio.py  main.py  models.py  registry.py  registry_store.py  runtime.py  scheduler.py  settings.py
services/lifecycle/tests/: test_adapters.py  test_controller.py  test_metrics.py  test_registry.py  test_scheduler.py
services/lms_bridge/: .gitattributes  README.md  lms-shim  lms_bridge.py
services/queue_proxy/: Dockerfile  requirements.txt
services/queue_proxy/queue_proxy/: __init__.py  backend_registry.py  forwarder.py  http_proxy.py  limiter.py  main.py  metrics.py  policy.py  postgres_task_store.py  request_preparation.py  responses.py  routing.py  settings.py  task_queue.py
services/queue_proxy/tests/: test_backend_registry.py  test_limiter.py  test_policy.py  test_postgres_task_store.py  test_request_preparation.py  test_routing.py  (+1 more)
tests/: conftest.py  test_client.py  test_core_helpers.py  test_llmoctl.py
tests/integration/: support.py  test_queue_proxy_fake_backend.py
tests/support/: __init__.py  fake_registry_app.py
