[project]
name = "local-llm-orchestrator"
version = "0.1.0"
description = "Local OpenAI-compatible LLM orchestrator with queueing, token budgets, and backend routing."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
llmoctl = "llmoctl:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools]
packages = ["orchestrator_client", "orchestrator_core"]
py-modules = ["llmoctl"]

[tool.pytest.ini_options]
pythonpath = [
  "services/healthcheck",
  "services/queue_proxy",
  "services/fake_openai_backend",
  "services/gpu_inventory",
  "services/lifecycle",
]
testpaths = [
  "services/healthcheck/tests",
  "services/queue_proxy/tests",
  "services/gpu_inventory/tests",
  "services/lifecycle/tests",
  "tests",
]
addopts = "-q"
